traefik/master-forwarded-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: master-forward-auth
  namespace: traefik
spec:
  forwardAuth:
    address: http://ak-outpost-master-forward-auth.authentik.svc.cluster.local:9000/akprox/auth/traefik
    trustForwardHeader: true
    authResponseHeaders:
      - Set-Cookie
      - X-Auth-Username
      - X-Auth-Groups
      - X-Forwarded-Email
      - X-Forwarded-Preferred-Username
      - X-Forwarded-User
