traefik/security-headers.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: security-headers
  namespace: traefik
spec:
  headers:
    frameDeny: true
    sslRedirect: true
    browserXssFilter: true
    contentTypeNosniff: true

    #HSTS
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 31536000
